Name:            TorDNSEL
Version:         0.0.6-dev
Synopsis:        provides a DNSBL-style interface for detecting Tor exit nodes
Description:     TorDNSEL implements a design for a DNSBL-style interface for
  detecting connections exiting the Tor network. This design and its rationale
  is described at <https://www.torproject.org/svn/trunk/doc/contrib/torel-design.txt>.
License:         PublicDomain
License-File:    LICENSE
Homepage:        http://p56soo2ibjkx23xo.onion/
Package-URL:     http://p56soo2ibjkx23xo.onion/dist/tordnsel-0.0.6.tar.gz
Author:          tup
Maintainer:      tup.tuple@googlemail.com
Build-Depends:   base>=2.0, network>=2.0, mtl>=1.0, unix>=1.0, stm>=2.0,
  time>=1.0, HUnit>=1.1, binary>=0.3
Tested-With:     GHC==6.6
Data-Files:      config/tordnsel.conf.sample, contrib/cacti-input.pl,
  config/tordnsel-init.d-script.sample, doc/tordnsel.8

Executable:      tordnsel
Main-Is:         tordnsel.hs
Other-Modules:   TorDNSEL.Config,
                 TorDNSEL.Config.Internals,
                 TorDNSEL.Control.Concurrent.Link,
                 TorDNSEL.Control.Concurrent.Link.Internals,
                 TorDNSEL.Control.Concurrent.Util,
                 TorDNSEL.DeepSeq,
                 TorDNSEL.Directory,
                 TorDNSEL.Directory.Internals,
                 TorDNSEL.DistinctQueue,
                 TorDNSEL.DNS,
                 TorDNSEL.DNS.Internals,
                 TorDNSEL.DNS.Server,
                 TorDNSEL.DNS.Server.Internals,
                 TorDNSEL.Document,
                 TorDNSEL.ExitTest.Initiator,
                 TorDNSEL.ExitTest.Initiator.Internals,
                 TorDNSEL.ExitTest.Request,
                 TorDNSEL.ExitTest.Server,
                 TorDNSEL.ExitTest.Server.Internals,
                 TorDNSEL.Log,
                 TorDNSEL.Log.Internals,
                 TorDNSEL.Main,
                 TorDNSEL.NetworkState,
                 TorDNSEL.NetworkState.Internals,
                 TorDNSEL.NetworkState.Storage,
                 TorDNSEL.NetworkState.Storage.Internals,
                 TorDNSEL.NetworkState.Types,
                 TorDNSEL.Random,
                 TorDNSEL.Socks,
                 TorDNSEL.Socks.Internals,
                 TorDNSEL.Statistics,
                 TorDNSEL.Statistics.Internals,
                 TorDNSEL.System.Timeout,
                 TorDNSEL.TorControl,
                 TorDNSEL.TorControl.Internals,
                 TorDNSEL.Util
HS-Source-Dirs:  src
Includes:        sys/types.h, unistd.h, sysexits.h, netinet/in.h, openssl/rand.h
Extra-Libraries: crypto
GHC-Options:     -O2 -Wall -Werror -DVERSION="0.0.6-dev"

Executable:      runtests
Buildable:       False
Main-Is:         runtests.hs
Other-Modules:   TorDNSEL.Config.Tests,
                 TorDNSEL.Directory.Tests,
                 TorDNSEL.DNS.Tests,
                 TorDNSEL.DNS.Server.Tests
HS-Source-Dirs:  src
Includes:        netinet/in.h, openssl/rand.h
Extra-Libraries: crypto
GHC-Options:     -fasm -Wall -Werror -fno-warn-missing-signatures
